--- a/assets/package.json
+++ b/assets/package.json
@@ -3,9 +3,11 @@
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
+    "preact": "^10.27.2",
     "topbar": "^3.0.0"
   },
   "devDependencies": {
+    "@preact/preset-vite": "^2.10.2",
     "@tailwindcss/vite": "^4.1.0",
     "daisyui": "^5.0.0",
     "phoenix_vite": "file:../deps/phoenix_vite",
