--- a/assets/tsconfig.json
+++ b/assets/tsconfig.json
@@ -26,7 +26,9 @@
       "*": ["../deps/*"]
     },
     "allowJs": true,
-    "noEmit": true
+    "noEmit": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact"
   },
   "include": ["js/**/*"]
 }
