--- a/assets/package.json
+++ b/assets/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "@tanstack/react-query": "^5.89.0",
+    "@tanstack/react-router": "^1.131.47",
+    "@tanstack/react-router-devtools": "^1.131.47",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
@@ -9,6 +12,7 @@
   "devDependencies": {
     "@preact/preset-vite": "^2.10.2",
     "@tailwindcss/vite": "^4.1.0",
+    "@tanstack/router-plugin": "^1.131.47",
     "daisyui": "^5.0.0",
     "phoenix_vite": "file:../deps/phoenix_vite",
     "tailwindcss": "^4.1.0",
