--- a/assets/package.json
+++ b/assets/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
+  },
   "dependencies": {
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-router": "^1.131.47",
@@ -15,6 +19,7 @@
     "@tanstack/router-plugin": "^1.131.47",
     "daisyui": "^5.0.0",
     "phoenix_vite": "file:../deps/phoenix_vite",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4.1.0",
     "vite": "^6.3.0"
   }
