Add catalyst and a few smaller tweaks

--- a/assets/package.json
+++ b/assets/package.json
@@ -4,9 +4,13 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-router": "^1.131.47",
     "@tanstack/react-router-devtools": "^1.131.47",
+    "clsx": "^2.1.1",
+    "motion": "^12.23.22",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
