--- a/assets/tsconfig.json
+++ b/assets/tsconfig.json
@@ -29,7 +29,7 @@
     "allowJs": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "jsxImportSource": "preact",
+    "jsxImportSource": "react",
     "strictNullChecks": true
   },
   "include": ["js/**/*"]
