--- a/assets/package.json
+++ b/assets/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "generate:api": "openapi-typescript ../priv/static/openapi.json -o ./js/api/schema.ts"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
@@ -11,6 +12,7 @@
     "@tanstack/react-router-devtools": "^1.131.47",
     "clsx": "^2.1.1",
     "motion": "^12.23.22",
+    "openapi-fetch": "^0.12.4",
     "react": "^19.1.1",
     "topbar": "^3.0.0"
   },
@@ -18,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.0",
     "@tanstack/router-plugin": "^1.131.47",
     "@vitejs/plugin-react": "^5.0.4",
+    "openapi-typescript": "^7.4.3",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.0",
     "vite": "^6.3.0"
