Basic image upload

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ photowalk-*.tar
 
 # Ignore assets that are produced by build tools.
 /priv/static/*
+/priv/waffle/
 
 # In case you use Node.js/npm, you want to ignore these.
 npm-debug.log
