--- a/assets/tsconfig.json
+++ b/assets/tsconfig.json
@@ -23,8 +23,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "*": ["../deps/*"],
-      "@catalyst/*": ["src/catalyst/*"]
+      "@/*": ["./src/*"]
     },
     "allowJs": true,
     "noEmit": true,
