--- a/assets/package.json
+++ b/assets/package.json
@@ -7,14 +7,20 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-router": "^1.131.47",
     "@tanstack/react-router-devtools": "^1.131.47",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.545.0",
     "motion": "^12.23.22",
     "openapi-fetch": "^0.12.4",
     "react": "^19.1.1",
-    "topbar": "^3.0.0"
+    "tailwind-merge": "^3.3.1",
+    "topbar": "^3.0.0",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.0",
